# pi-extensions

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.json  clippy.toml  index.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml  release-plz.toml  tsconfig.base.json  tsconfig.json  vitest.config.ts  vitest.evals.config.ts  vitest.expensive.config.ts  vitest.workspace.ts
.changeset/: bg-safe-truncated-text-control-char.md  block-resolution-streaming.md  bold-candles-juggle.md  chilly-lines-enjoy.md  config-driven-bw.md  consistent-naming.md  dim-distinct-from-muted.md  early-lamps-brush.md  extract-shared-utilities.md  fix-hashline-envelope-separator.md  fix-tool-background-contrast.md  handle-github-gist-url.md  hash-anchor-consistency.md  healthy-camels-bathe.md  lazy-dingos-dream.md  major-pi-ask.md  memory-vcc-shim.md  merge-webfetch-websearch.md  mighty-moose-yell.md  nice-roses-listen.md  pi-eval-cwd.md  pi-memory-initial.md  pi-office-bump-deps.md  pi-trigger-autocomplete.md  public-eyes-clean.md  raw-xlsx-option.md  red-dryers-argue.md  refactor-pi-memory.md  rename-ask-to-AskUserQuestion.md  rename-web-tools-to-claude-code-names.md  revert-bw.md  sharp-pianos-think.md  shy-windows-jam.md  stable-stats-report.md  stale-crabs-wash.md  tidy-cobras-look.md  tidy-gorillas-run.md  tidy-prompts.md  tidy-stingrays-tickle.md  tight-render-ux.md  (+4 more)
.forgejo/workflows/: release.yml
.github/workflows/: ci.yml  pr-changesets.yml  pr-release-plz.yml  release.yml  reusable-ci-cargo.yml  reusable-ci-npm.yml  reusable-release-cargo.yml  reusable-release-npm.yml
crates/bw/: CHANGELOG.md  Cargo.toml  README.md
crates/bw/src/: binds.rs  cli.rs  config.rs  defaults.rs  lib.rs  main.rs  types.rs  wsl2.rs
crates/bw/tests/: cli.rs
crates/mm-cli/: CHANGELOG.md  Cargo.toml
crates/mm-cli/plugin/.claude-plugin/: plugin.json
crates/mm-cli/plugin/hooks/: hooks.json  session-start-compact.sh
crates/mm-cli/plugin/skills/compiler/: SKILL.md
crates/mm-cli/plugin/skills/readchat/: SKILL.md
crates/mm-cli/plugin/skills/recall/: SKILL.md
crates/mm-cli/plugin/skills/searchchat/: SKILL.md
crates/mm-cli/src/: cli.rs  lex.rs  lib.rs  main.rs  parse_util.rs  paths.rs  types.rs
crates/mm-cli/src/claude/: ir.rs  mod.rs  parse.rs
crates/mm-cli/src/commands/: compile.rs  mod.rs  pi.rs  search.rs
crates/mm-cli/src/pi/: parse.rs  request.rs
crates/mm-cli/src/pipeline/: brief.rs  format.rs  merge.rs  mod.rs  noise.rs  normalize.rs  stats.rs
crates/mm-cli/src/pipeline/sections/: commits.rs  files.rs  goals.rs  mod.rs  preferences.rs
crates/mm-cli/tests/fixtures/: away_summary.jsonl  claude_rich.jsonl  edge_cases.jsonl  split_assistant.jsonl
evals/: run-real-eval.test.ts  search-recall.test.ts  smoke.test.ts  trigger-evals.json
scripts/: publish.sh
searxng/: .env
src/: config.ts  gh-auth-status.ts  webfetch.ts  websearch.ts
src/lib/: decode-contents.ts  processors.ts  types.ts  url-to-endpoint.ts
test/: config.test.ts  gh-auth-status.test.ts  gh-search.test.ts  parsers.test.ts
test/_helpers/: fetch.ts
test/lib/: decode-contents.test.ts  url-to-endpoint.test.ts
test/providers/: index.test.ts  searxng.test.ts
(+1 files in other folders)
