[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://codeberg.org/mammothb/pi-extensions"
rust-version = "1.88"

[workspace.dependencies]
anyhow = { version = "1.0.103" }
clap = { version = "4.6.1", features = ["cargo", "derive"] }
env_logger = { version = "0.11.10" }
fs-err = { version = "3.3.0" }
glob = { version = "0.3.3" }
itertools = { version = "0.15.0" }
log = { version = "0.4.33" }
regex = { version = "1.12.4" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150" }
shellexpand = { version = "3.1.2" }
unicode-segmentation = { version = "1.13.0" }

# dev-dependencies
assert_cmd = { version = "2.2.1" }
predicates = { version = "3.1.4" }
rstest = { version = "0.26.1" }
serial_test = { version = "3.4.0" }
tempfile = { version = "3.27.0" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.dev.package."*"]
opt-level = 2
debug = false
